--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       padding: 40px;
       border-radius: 10px;
       text-align: center;
+      max-width: 90%;
     }
 
     input {
@@ -72,6 +73,24 @@
       color: #00f;
       cursor: pointer;
     }
+
+    /* Shop styles */
+    .shop-item {
+      background: rgba(255,255,255,0.1);
+      padding: 20px;
+      margin: 10px;
+      border-radius: 10px;
+      display: inline-block;
+      width: 150px;
+      text-align: center;
+    }
+
+    .shop-item img {
+      width: 100px;
+      height: 100px;
+      margin-bottom: 10px;
+    }
+
   </style>
 </head>
 <body>
@@ -102,6 +121,30 @@
     <input type="password" id="registerPassword" placeholder="Mot de passe">
     <button onclick="register()">S'inscrire</button>
     <a onclick="showPage('homePage')">Retour à l'accueil</a>
+  </div>
+
+  <!-- Page Shop -->
+  <div id="shopPage" class="page">
+    <h2>Bienvenue dans le Shop !</h2>
+    <div class="shop-items">
+      <div class="shop-item">
+        <img src="https://via.placeholder.com/100" alt="Produit 1">
+        <p>Produit 1</p>
+        <button>Acheter</button>
+      </div>
+      <div class="shop-item">
+        <img src="https://via.placeholder.com/100" alt="Produit 2">
+        <p>Produit 2</p>
+        <button>Acheter</button>
+      </div>
+      <div class="shop-item">
+        <img src="https://via.placeholder.com/100" alt="Produit 3">
+        <p>Produit 3</p>
+        <button>Acheter</button>
+      </div>
+    </div>
+    <br>
+    <button onclick="showPage('homePage')">Se déconnecter</button>
   </div>
 
   <script>
@@ -151,8 +194,9 @@
       document.getElementById(pageId).style.display = 'block';
     }
 
-    // Simulations de connexion / inscription (sans backend)
-    const users = {}; // stocke les comptes localement pour la session
+    // Stockage temporaire des comptes
+    const users = {};
+
     function register() {
       const username = document.getElementById('registerUsername').value;
       const password = document.getElementById('registerPassword').value;
@@ -174,7 +218,7 @@
       const password = document.getElementById('loginPassword').value;
       if (users[username] && users[username] === password) {
         alert(`Bienvenue, ${username} !`);
-        showPage('homePage');
+        showPage('shopPage'); // redirection vers la page shop
       } else {
         alert('Nom d’utilisateur ou mot de passe incorrect');
       }
